--- a/css/styles.css
+++ b/css/styles.css
@@ -125,6 +125,7 @@
     }
 
     .header-link {
+        position: relative;
         padding-top: 32px;
         padding-bottom: 32px;
         display: block;
@@ -142,6 +143,18 @@
 
     .header-list .link.current {
         color: var(--accent-color);
+    }
+
+    .current::after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 4px;
+        border-radius: 2px;
+        background-color: var(--accent-color);
+        display: block;
+        right: 0;
+        bottom: -1px;
     }
 
 
