--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,8 @@
         --accent-color: #2196F3;
         --primary-background-color: #FFFFFF;
         --secondary-background-color: #2F303A;
-        --third-background-color:#F5F4FA;
+        --third-background-color: #F5F4FA;
+        /*--animation: transition-duration: 250ms, cubic-bezier(0.4, 0, 0.2, 1);*/
     }
 
     body {
@@ -134,6 +135,8 @@
         line-height: 1.14;
         letter-spacing: 0.02em;
         color: var(--secondary-text-color);
+
+
     }
 
     .header-link:hover,
@@ -145,7 +148,7 @@
         color: var(--accent-color);
     }
 
-    .current::after {
+    .header-list .current::after {
         content: "";
         position: absolute;
         width: 100%;
@@ -627,11 +630,6 @@
         margin-top: 30px;
     }
 
-    /*.projects-page-item:hover,*/
-    /*!*.projects-page-item:focus {*!*/
-    /*    transform: translateY(0);*/
-    /*}*/
-
 
     .projects-page-link:hover,
     .projects-page-link:focus {
@@ -654,7 +652,8 @@
         left: 0;
         height: 100%;
         transform: translateY(100%);
-        transition: transform 250ms;
+        transition-property: transform;
+        transition-duration: 250ms;
         transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
         font-size: 18px;
@@ -663,6 +662,7 @@
         color: var(--white-text-color);
         background-color: rgba(33, 150, 243, 0.9);
     }
+
 
     .projects-item-bottom {
         padding: 20px 24px;
@@ -683,4 +683,60 @@
         font-size: 16px;
         line-height: 1.87;
         color: var(--primary-text-color);
+    }
+
+
+    /*------------!* Backdrop and modal*!------------*/
+
+
+    .backdrop {
+        position: fixed;
+        width: 100vw;
+        height: 100vh;
+        top: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.2);
+
+        transition-property: opacity, visibility;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .backdrop.is-hidden {
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+    }
+
+    .modal {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+        min-width: 528px;
+        min-height: 581px;
+        background-color: var(--primary-background-color);
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 1px rgba(0, 0, 0, 0.14), 0 2px 1px rgba(0, 0, 0, 0.2);
+        border-radius: 4px;
+    }
+
+    .close-modal-btn {
+        position: absolute;
+        right: 8px;
+        top: 8px;
+
+        width: 30px;
+        height: 30px;
+        background-color: var(--primary-background-color);
+        border-radius: 50%;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .close-modal-icon {
+        fill: #000000;
     }
