--- a/css/styles.css
+++ b/css/styles.css
@@ -136,7 +136,7 @@
         letter-spacing: 0.02em;
         color: var(--secondary-text-color);
 
-
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
     .header-link:hover,
@@ -192,6 +192,8 @@
         line-height: 1.14;
         letter-spacing: 0.02em;
         color: var(--primary-text-color);
+
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
     .header-contacts-link:hover,
@@ -243,7 +245,6 @@
         background-color: var(--accent-color);
         box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
         color: var(--white-text-color);
-
     }
 
 
@@ -257,9 +258,6 @@
         margin-left: -30px;
         margin-top: -30px;
     }
-
-    /*.preference-icon-svg {*/
-    /*}*/
 
     .preference-item {
         flex-basis: calc(100% / 4 - 30px);
@@ -393,6 +391,8 @@
         display: flex;
         align-items: center;
         justify-content: center;
+
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
     .social-link:hover,
@@ -437,12 +437,13 @@
         height: 92px;
         border: 1px solid #AFB1B8;
         border-radius: 4px;
+
+        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
     .clients-link:hover,
     .clients-link:focus {
         border: 1px solid var(--accent-color);
-        /*background-color: transparent;*/
     }
 
     .clients-link:hover .clients-icon,
@@ -493,7 +494,9 @@
 
         .footer .footer-address-link {
             line-height: 1.71;
-            color: var(--white-text-color)
+            color: var(--white-text-color);
+
+            transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
 
         .footer-address-link:hover, .footer-contacts-link:hover,
@@ -503,7 +506,9 @@
 
         .footer-contacts-link {
             line-height: 1.71;
-            color: var(--footer-contacts-color)
+            color: var(--footer-contacts-color);
+
+            transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
 
     .footer-item:not(:last-child) {
@@ -549,6 +554,8 @@
         display: flex;
         align-items: center;
         justify-content: center;
+
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
     .footer-social-link:hover,
@@ -559,8 +566,6 @@
     .footer-social-icon {
         fill: var(--white-text-color);
     }
-
-
 
 
 
@@ -594,6 +599,8 @@
             text-align: center;
             color: var(--secondary-text-color);
             background-color: #F5F4FA;
+
+            transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
 
         .projects-btn:hover,
@@ -630,10 +637,16 @@
         margin-top: 30px;
     }
 
+    .projects-page-link {
+        display: block;
+
+        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
 
     .projects-page-link:hover,
     .projects-page-link:focus {
-        display: block;
+        /*display: block;*/
         box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
     }
 
@@ -652,9 +665,11 @@
         left: 0;
         height: 100%;
         transform: translateY(100%);
-        transition-property: transform;
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        /*transition-property: transform;*/
+        /*transition-duration: 250ms;*/
+        /*transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);*/
 
         font-size: 18px;
         line-height: 1.56;
@@ -697,9 +712,10 @@
         left: 0;
         background-color: rgba(0, 0, 0, 0.2);
 
-        transition-property: opacity, visibility;
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        /*transition-property: opacity;*/
+        /*transition-duration: 250ms;*/
+        /*transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);*/
     }
 
     .backdrop.is-hidden {
@@ -720,6 +736,8 @@
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 1px rgba(0, 0, 0, 0.14), 0 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 4px;
     }
+
+
 
     .close-modal-btn {
         position: absolute;
