--- a/css/styles.css
+++ b/css/styles.css
@@ -315,9 +315,26 @@
     }
 
     .about-item {
+        position: relative;
+
         flex-basis: calc(100% / 3 - 30px);
         margin-left: 30px;
         margin-top: 30px;
+    }
+
+    .about-item-text {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+
+        font-weight: 700;
+        line-height: 1.14;
+        padding: 27px 82px;
+        text-align: center;
+        text-transform: uppercase;
+        color: var(--white-text-color);
+        background-color: rgba(47, 48, 58, 0.8);
     }
 
 
