--- a/css/styles.css
+++ b/css/styles.css
@@ -330,7 +330,7 @@
 
         font-weight: 700;
         line-height: 1.14;
-        padding: 27px 82px;
+        padding: 27px 0;
         text-align: center;
         text-transform: uppercase;
         color: var(--white-text-color);
@@ -663,11 +663,11 @@
 
     .projects-page-link:hover,
     .projects-page-link:focus {
-        /*display: block;*/
         box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
     }
 
-    .projects-page-link:hover .projects-top-text {
+    .projects-page-link:hover .projects-top-text,
+    .projects-page-link:focus .projects-top-text {
         transform:translateY(0);
     }
 
@@ -747,7 +747,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%) scale(1);
-        transition: transform 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
         min-width: 528px;
         min-height: 581px;
